UF-11005 - Verification of LinkMobility connectivity
Temporarily adds an endpoint to be able to verify LinkMobility connectivity from
the OpenShift cluster.
